fixed the other button's text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -139,10 +139,6 @@ h5 {
 
 #other{
   cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 
